# PIAA_labs

./: README.md
lab5/: CMakeLists.txt  README  build.sh
lab5/hdr/: func.h
lab5/src/: NAIVEvsKMP.cpp  func.cpp  kmp.cpp  rand.cpp  shift.cpp
lab5/test/: test.cpp
lab6/: CMakeLists.txt  README  build.sh
lab6/hdr/: func.h
lab6/src/: func.cpp  joker_alg.cpp  stand_alg.cpp
lab6/test/: test.cpp
